--- a/example-quic-file-transfer/example-quic-file-transfer.csproj
+++ b/example-quic-file-transfer/example-quic-file-transfer.csproj
@@ -9,6 +9,14 @@
 	<EnablePreviewFeatures>true</EnablePreviewFeatures>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1416</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1416</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
